--- a/src/app/components/pages/header/header.component.html
+++ b/src/app/components/pages/header/header.component.html
@@ -14,9 +14,9 @@
           <span class="fs-5 text-muted" ><i class="fa-solid fa-user" style="color: #ffffff;"></i></span>
         </a>
         <ul class="dropdown-menu dropdown-menu-end rounded-1 px-3">
-          <li><a class="dropdown-item " href="#">Your profile page</a></li>
+          <li><a class="dropdown-item " href="/user_account">Your profile page</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="/ready_request">My requests</a></li>
+          <li><a class="dropdown-item" href="/create_request">Create Request</a></li>
           <li><hr class="dropdown-divider"></li>
           <li ><a class="dropdown-item" href="#" (click)="logout()">Log out</a></li>
         </ul>
