--- a/src/app/components/pages/ready-request/ready-request.component.html
+++ b/src/app/components/pages/ready-request/ready-request.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <main class="white">
   <div class=" ms-3">
     <div class="row">
@@ -10,7 +10,7 @@
           <div class="col-5 col-lg-3 " style="margin-left: 20%">
            <a [routerLink]="['/main_page']"><button type="button" class="btn btn-close btn-dark" aria-label="Close"></button></a>
           </div>
-        </div>
+        </div> -->
         <!--card-->
         <!-- <div class="card border border-end border-light-subtle rounded-5 bg-transparent my-4 p-2" style="width:78%">
           <div class="card-body " *ngFor="let requests of requests">
@@ -27,12 +27,12 @@
             </div>
           </div>
         </div> -->
-      </div>
-      <div class="col-7 col-lg-8 position-relative" id="map" style="min-height: 700px;">
+      <!-- </div>
+      <div class="col-7 col-lg-8 position-relative" id="map" style="min-height: 700px;"> -->
         <!-- <img src="" class="img-fluid"> -->
-      </div>
+      <!-- </div>
       <app-button-create></app-button-create>
     </div>
   </div>
 </main>
-<app-foor></app-foor>
+<app-foor></app-foor> -->
