--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 body{
   font-family: 'Droid Serif', serif;
-  background: black;
+  background: linear-gradient(109.67deg, rgba(0, 0, 0, 0.92) 43.39%, #526CAD 100%);
+
+}
+main{
+  background: white;
 }
 
 .roboto{
@@ -17,7 +21,7 @@ body{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  text-fill-color: transparent;
+
 }
 .dark{
   background: black;
@@ -31,6 +35,9 @@ body{
   border: none;
 }
 .footer{
-  background: rgba(0, 0, 0, 0.49);
+  background-color: rgba(0, 0, 0, 0.8);
 
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
