--- a/src/app/components/pages/createrequest/createrequest.component.html
+++ b/src/app/components/pages/createrequest/createrequest.component.html
@@ -14,20 +14,19 @@
             </div>
             <div class="container">
               <p for="title" class="fs-4 pt-4 ">Title</p>
-              <div class="input-group input-group-lg pt-lg-2" style="width: 86%;">
-              <textarea formControlName="title" class="form-control" aria-label="With textarea" id="title" rows="4" ></textarea>
+              <div class="input-group input-group-lg pt-lg-2" style="width: 86%;height: 10%;">
+              <textarea formControlName="title" class="form-control" aria-label="With textarea" id="title" rows="2" ></textarea>
           </div>
           </div>
           <div class="container pb-4">
               <p for="description" class="fs-4 pt-4 ">Problem</p>
-              <div class="input-group input-group-lg pt-lg-2" style="width: 86%;">
-                  <textarea formControlName="description" class="form-control" aria-label="With textarea" id="description" rows="4" ></textarea>
+              <div class="input-group input-group-lg pt-lg-2" style="width: 86%; height: 20%;">
+                  <textarea formControlName="description" class="form-control" aria-label="With textarea" id="description" rows="2" ></textarea>
               </div>               
           </div>
           <div class="form-group container pb-4">
             <label for="images" class="fs-4">Images</label>
             <div class="pt-2">
-              <label for="images">Images:</label>
               <input type="file" (change)="onFileSelect($event)">
           </div>
           </div>
@@ -35,7 +34,7 @@
     
           </div>
           <div class="p-3 text-center col-9 mx-auto">
-            <button type="submit" class="btn btn-danger btn-lg rounded-4 w-75" (click)="save()">Post</button>
+            <button type="submit" class="btn btn-dark btn-lg rounded-4 w-75" (click)="save()">Submit</button>
           </div> 
         </form>
         
