--- a/src/app/components/pages/openrequest/openrequest.component.html
+++ b/src/app/components/pages/openrequest/openrequest.component.html
@@ -1,30 +1,38 @@
 <app-header></app-header>
 <main class="white">
-  <div class=" ms-3">
+  <div class="ms-3">
     <div class="row">
-      <div class="container col-5 col-lg-4 ">
+      <div class="container col-5 col-lg-4">
         <div class="d-flex justify-content-start pt-4">
-          <h3 class="fw-bold ms-3">Requets</h3>
+          <h3 class="fw-bold ms-3">Requests</h3>
         </div>
-        <div *ngIf="petitions">
-          <div class="card border border-end border-light-subtle rounded-5 bg-transparent my-4 p-2" style="width:78%">
-            <div class="card-body " >
-              <h4 class="card-title">{{petitions.petitionId}}</h4>
-              <h6 class="card-subtitle my-3 text-body-dark">{{petitions.creatorEmail}}</h6>
-              <div class="d-flex my-3 ">
-                <p class="card-subtitle fs-6  text-body-dark">{{petitions.description}}</p>
-                <p class="card-subtitle fs-6 ps-5 text-body-secondary">{{petitions.description}}</p>
+        <!-- card -->
+        <div *ngIf="petition" class="card-container container">
+          <div
+            class="card border border-end border-light-subtle rounded-5 bg-transparent my-4 p-2 "
+            style="width: 80%"
+            >
+            <div class="card-body">
+              <h4 class="card-title">{{ petition.title }}</h4>
+              <h6 class="card-subtitle my-3 text-body-dark">{{ petition.address }}</h6>
+              <div class="d-flex my-3">
+                <p class="card-subtitle fs-6 text-body-dark">{{ petition.status }}</p>
+                <p class="card-subtitle fs-6 ps-5 text-body-secondary">{{ petition.createdAt | date: 'medium' }}</p>
               </div>
-              <p class="card-subtitle pt-2">{{petitions.creatorEmail}}</p>
+              <p class="card-subtitle">{{ petition.description}}</p>
+              <img [src]="petition.images" class="img-thumbnail my-3 ">
               <div class="d-flex justify-content-end mt-2">
+                <button class="d-flex btn align-items-left" type="button" (click)="likePetition(petition)">
+                  <p class="card-subtitle fs-6 text-body-secondary">Likes: {{ petition.likesNumber }}</p>
+                  <i class="ms-2 fa-solid fa-heart" [style.color]="petition.likedByThisUser ? '#000000' : ''"></i>
+                </button>
               </div>
             </div>
           </div>
         </div>
-        
       </div>
-      <div class="col-7 col-lg-8 position-relative" id="map" style="min-height: 700px;">
-        <!-- <img src="" class="img-fluid"> -->
+      <!-- map -->
+      <div class="col-7 col-lg-8 position-relative" id="map" style="min-height: 695px;">
       </div>
       <app-button-create></app-button-create>
     </div>
